Bug 285993 - Cannot upload example circuits
Summary: Cannot upload example circuits
Status: RESOLVED FIXED
Alias: None
Product: cirkuit
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.4.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Matteo Agostinelli
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-07 12:46 UTC by Orestes Mas
Modified: 2011-11-07 14:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Orestes Mas 2011-11-07 12:46:42 UTC
Version:           0.4.1 (using KDE 4.7.2) 
OS:                Linux

When I try to use the menu option to upload my own examples (to Get New Hot Stuff website), I always get the "Save the current document before uploading it" message, whether or not is the file previously saved.

Reproducible: Always

Steps to Reproduce:
Try to upload a file to the GNHS service using the "File-> Upload Example" menu option

Actual Results:  
An error dialog pops up

Expected Results:  
Continue uploading process
Comment 1 Matteo Agostinelli 2011-11-07 14:47:53 UTC
Git commit 4fa7e38638a2b617de10b99954b93d4af4dae18d by Matteo Agostinelli.
Committed on 07/11/2011 at 15:42.
Pushed by agostinelli into branch 'master'.

Fixed wrong URL assignment

When saving as a new file, the update of the current URL was wrong. This
caused the upload example dialog to fail.

BUG: 285993
FIXED-IN: 0.4.2

M  +1    -1    src/mainwindow.cpp

http://commits.kde.org/cirkuit/4fa7e38638a2b617de10b99954b93d4af4dae18d