Fixed wrong URL assignment

When saving as a new file, the update of the current URL was wrong. This
caused the upload example dialog to fail.

BUG: 285993
FIXED-IN: 0.4.2